Major update - restructuring FSI benchmarks

--- a/fluid/getfem_vs_fenics_comparison.ipynb
+++ b/fluid/getfem_vs_fenics_comparison.ipynb
@@ -2,13 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "014942c0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "print(\"hello\")"
    ]
   },
   {
@@ -21,13 +30,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "ba26af00",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read FEniCS data\n",
-    "fenics = np.loadtxt('results_fenics/cd_cl_time_series_fenics.txt')\n",
+    "fenics = np.loadtxt('results_fenics_iterative/cd_cl_time_series_fenics.txt')\n",
     "time_fenics = fenics[:, 0]\n",
     "Cd_fenics = fenics[:, 1]\n",
     "Cl_fenics = fenics[:, 2]\n",
@@ -38,7 +47,7 @@
     "    {'file': r'results_cylinder_channel_getfem_part/force_coefficients_channel.txt', 'name': 'GetFEM part Q2-Q1'},\n",
     "    #{'file': r'results_cylinder_channel_getfem_part_Q3_Q1/force_coefficients_channel.txt', 'name': 'GetFEM part Q3-Q1'},\n",
     "    {'file': r'results_cylinder_channel_getfem_mono/force_coefficients_channel.txt', 'name': 'GetFEM mono Q2-Q1'},\n",
-    "    #{'file': r'results_stokes_time_variant_26_01/force_coefficients_channel.txt', 'name': 'GetFEM stokes'},\n",
+    "    #{'file': r'results_cylinder_channel_getfem_mono_stokes/force_coefficients_channel.txt', 'name': 'GetFEM stokes'}\n",
     "\n",
     "]\n"
    ]
@@ -53,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "14b61a17",
    "metadata": {},
    "outputs": [
@@ -121,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "d5174b42",
    "metadata": {},
    "outputs": [
